fixing FAQ on mobile

--- a/src/styles/faq.scss
+++ b/src/styles/faq.scss
@@ -13,6 +13,7 @@
 .faq-main {
   width: $content-width;
   max-width: $content-max-width;
+  margin-left: 2rem;
 
   .column {
     margin-top: 20px;
@@ -29,6 +30,8 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    
 
     a {
       color: $black;
